# structible

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN-NOTES.md  README.md  TODO.md
structible/: Cargo.toml
structible-macros/: Cargo.toml
structible-macros/src/: codegen.rs  lib.rs  parse.rs  util.rs
structible/src/: lib.rs
structible/tests/: complex_generics.rs  custom_backing.rs  debug_output.rs  edge_cases.rs  optional_derives.rs  ownership_extraction.rs  rfc8984-location.rs  unknown_fields.rs
