[package]
name = "structible-macros"
edition = "2024"
description = "Proc macros for structible"
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["proc-macro", "struct", "map", "hashmap", "derive"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
# "full" is required for syn::Type variant matching, GenericArgument/PathArguments
# for Option<T> extraction, and parse_nested_meta() for attribute parsing.
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
