[package]
name = "structible-macros"
edition = "2024"
description = "Proc macros for structible"
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["proc-macro", "struct", "map", "hashmap", "derive"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = "1"
