[package]
name = "structible"
edition = "2024"
description = "A macro for defining virtual structs backed by maps"
license.workspace = true
repository.workspace = true
version.workspace = true
keywords = ["proc-macro", "struct", "map", "hashmap", "derive"]
categories = ["rust-patterns", "data-structures"]

[dependencies]
structible-macros = { version = "0.3.0", path = "../structible-macros" }
